tests/ui/rfcs/rfc-2396-target_feature-11/feature-gate-target_feature_11.rs
// only-x86_64

#[target_feature(enable = "sse2")] //~ ERROR can only be applied to `unsafe` functions
fn foo() {}

fn main() {}
